@@ -2,7 +2,7 @@
 # DESCRIPTION: Wrapper around g++ to emulate purify, etc, wrappers.
 ######################################################################
 #
-# This program is Copyright 2002-2008 by Wilson Snyder.
+# This program is Copyright 2002-2009 by Wilson Snyder.
 #
 # This program is free software; you can redistribute it and/or modify
 # it under the terms of either the GNU General Public License or the
